airline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airline-app-svc
  labels:
    app: airline-app
spec:
  type: NodePort
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  selector:
    app: airline-app
